updates to deploy to heroku

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -26,10 +27,12 @@
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "2.6.4",
+    "express": "^4.17.1",
     "ngx-bootstrap": "^4.2.0",
     "ngx-clipboard": "11.1.9",
     "ngx-toastr": "9.1.2",
     "nouislider": "13.1.1",
+    "path": "^0.12.7",
     "rxjs": "6.4.0",
     "zone.js": "0.8.29"
   },
@@ -42,6 +45,7 @@
     "@types/jasminewd2": "2.0.6",
     "@types/node": "11.9.0",
     "codelyzer": "4.5.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.0.0",
@@ -53,5 +57,9 @@
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
     "typescript": "3.2.4"
+  },
+  "engines": {
+    "node": "6.11.0",
+    "npm": "3.10.10"
   }
 }
